package headfirst.designpatterns.observer;

public interface Observer {
    public void update(float temp, float humidity, float pressure);
}